# athenaSQL

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  requirements-docs.in  setup.cfg  setup.py
.github/workflows/: deploy-docs.yml  release.yml
athenaSQL/: __init__.py  athena.py  athena_table.py  column.py  column_type.py  data_type.py  errors.py  operator_mixin.py  orders.py  utils.py
athenaSQL/functions/: __init__.py  aggregate.py  conditional.py  date_time.py  functions.py  math.py  regular_expression.py  string.py  window.py
athenaSQL/queries/: __init__.py  create.py  create_as.py  cte.py  insert.py  query_abc.py  select.py  unload.py  window.py
docs/: Makefile  _README.md  conf.py  index.rst  make.bat  quickstart.rst
docs/_static/css/: athenasql.css  autosummary.css
docs/_templates/autosummary/: class.rst  class_with_docs.rst
docs/concept/: columns.rst  databases_and_tables.rst  index.rst
docs/concept/functions/: aggregation.rst  date_time.rst  index.rst  string.rst  unicode.rst  url.rst  uuid.rst  window.rst
docs/concept/queries/: create.rst  create_as.rst  cte.rst  index.rst  insert_into.rst  select.rst  unload.rst  window.rst
docs/reference/: athenasql.athena.rst  athenasql.column.rst  athenasql.data_type.rst  athenasql.functions.rst  athenasql.queries.rst  index.rst
examples/: example1.py
scripts/: setup_venv.sh
src/athenaSQL/: __init__.py  column.py  orders.py
src/athenaSQL/functions/: __init__.py  aggregate.py  math.py  string.py
src/athenaSQL/queries/: cte.py  insert.py  select.py  unload.py  window.py
tests/: test_select.py
tests/test_function/: test_aggregate.py
