[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "athenaSql"
version = "0.0.1"
authors = [
  { name="Nabil Seid", email="nabeelseid@gmail.com" },
]
description = "SQL builder for AWS Athena, inspired by sparkSQL"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nabilseid/athenaSQL"
"Bug Tracker" = "https://github.com/nabilseid/athenaSQL/issues"
