[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "athenaSql"
version = "0.1-dev1"
authors = ["Nabil Seid"]
description = "SQL builder for AWS Athena, inspired by sparkSQL"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[project.urls]
"Homepage" = "https://github.com/nabilseid/athenaSQL"
"Bug Tracker" = "https://github.com/nabilseid/athenaSQL/issues"
