[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "athenaSql"
version = "0.1.1"
description = "SQL builder for AWS Athena, inspired by sparkSQL"
authors = ["Nabil Seid <nabeelseid@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "athenaSQL" }]
include = [{ path = "tests", format = "sdist" }]
homepage = "https://github.com/nabilseid/athenaSQL"
repository = "https://github.com/nabilseid/athenaSQL"
documentation = "https://github.com/nabilseid/athenaSQL/docs"
keywords = ["packaging", "athena", "sql", "athenaSQL"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^3.1.2"
awswrangler = "^3.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
jupyter = "^1.0.0"
myst-nb = {version = "1.0.0rc0", python = "^3.9"}
furo = {version = "^2023.9.10", python = "^3.9"}
sphinx-autoapi = {version = "^3.0.0", python = "^3.9"}
sphinxcontrib-napoleon = "^0.7"

[project.urls]
"Bug Tracker" = "https://github.com/nabilseid/athenaSQL/issues"
