[metadata]
name = athenaSQL
version = 0.0.1
author = Nabil Seid
author_email =  nabeelseid@gmail.com
description = SQL builder for AWS Athena, inspired by sparkSQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nabilseid/athenaSQL
project_urls =
    Bug Trackers = https://github.com/nabilseid/athenaSQL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = athenaSQL
packages = find:
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    coverage

[options.packages.find]
where = athenaSQL
